--- a/latex/sections/rb_tree.tex
+++ b/latex/sections/rb_tree.tex
@@ -48,6 +48,6 @@ Um dieser Problematik entgegen zu wirken, werden spezielle Einfüge- bzw. Lösch
 
 So müssen innerhalb dieser Einfüge- oder Lösch\-ope\-ra\-ti\-on\-en z.B. Rotationen von Knoten unter bestimmten Bedingung durchgeführt oder die Farben bzw. auch die Zeigerstruktur geändert werden.
 
-Werden die fünf Regeln unter allen Bedingungen und zu jeder Zeit eingehalten, so kann immer die maximale Laufzeit garantiert werden und außerdem können der kleinste und der größte Schlüssel immer direkt auf der linken bzw. auf der rechten Seite gefunden werden.
+Werden die fünf Regeln unter allen Bedingungen und zu jeder Zeit eingehalten, so kann immer die maximale Laufzeit garantiert werden und außerdem können der kleinste und der größte Schlüssel immer direkt auf der linkesten bzw. auf der rechtesten Seite gefunden werden.
 %Mit den Regeln von RED-BLACK wird mit Hilfe von z.B. Rotationen um das den Parent Knoten, immer für das richtige Gleichgewicht gesorgt.
 
